[gd_scene load_steps=15 format=2]

[ext_resource path="res://actors/AI.gd" type="Script" id=1]
[ext_resource path="res://assets/tiles/spritesheet.png" type="Texture" id=2]
[ext_resource path="res://actors/state_machine/state_machine.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/state_machine/states/dash.gd" type="Script" id=4]
[ext_resource path="res://actors/state_machine/states/wall.gd" type="Script" id=5]
[ext_resource path="res://actors/state_machine/states/walk.gd" type="Script" id=6]
[ext_resource path="res://actors/state_machine/states/idle.gd" type="Script" id=7]
[ext_resource path="res://actors/state_machine/states/fall.gd" type="Script" id=8]
[ext_resource path="res://actors/state_machine/states/jump.gd" type="Script" id=9]
[ext_resource path="res://actors/state_machine/states/chilling.gd" type="Script" id=10]
[ext_resource path="res://actors/Label.gd" type="Script" id=11]
[ext_resource path="res://actors/Traits.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 26.4406, 31.9916 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 235.077

[node name="AI" type="KinematicBody2D"]
input_pickable = false
collision_layer = 1
collision_mask = 0
collision/safe_margin = 0.08
motion/sync_to_physics = false
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "collision", "motion" ]
GRAVITY = 50
FLOOR_NORMAL = Vector2( 0, -1 )
SLOPE_STOP_SPEED = 200
SLOPE_MAX_DEGREE = 46
FALL_THRESHOLD = 100
can_dash = true
preset_genotype = [  ]
preset_phenotype = [  ]
left = "ui_left"
right = "ui_right"
up = "ui_up"
down = "ui_down"
jump = "ui_select"
dash = "ui_cancel"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 3 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 602, 84, 17, 19 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
_sections_unfolded = [ "shape" ]

[node name="state_machine" parent="." instance=ExtResource( 3 )]
editor/display_folded = true

[node name="dash" type="Node" parent="state_machine"]
script = ExtResource( 4 )
state_machine = "../"
dash_length = 300
dash_speed = 600

[node name="wall" type="Node" parent="state_machine"]
script = ExtResource( 5 )
state_machine = "../"
wall_jump = 800
dash_jump_multiplier = 1.4
MAX_WALL_SPEED = 600

[node name="walk" type="Node" parent="state_machine"]
editor/display_folded = true
script = ExtResource( 6 )
state_machine = "../"
walk_speed = 400

[node name="fall_threshold" type="Timer" parent="state_machine/walk"]
process_mode = 1
wait_time = 0.171664
one_shot = false
autostart = false

[node name="idle" type="Node" parent="state_machine"]
script = ExtResource( 7 )
state_machine = "../"

[node name="fall" type="Node" parent="state_machine"]
script = ExtResource( 8 )
state_machine = "../"
MAX_FALL_SPEED = 3000

[node name="jump" type="Node" parent="state_machine"]
script = ExtResource( 9 )
state_machine = "../"
jump_height = 800
max_jumps = 2

[node name="chilling" type="Node" parent="state_machine"]
script = ExtResource( 10 )
state_machine = "../"

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -21.0
margin_top = -48.0
margin_right = 19.0
margin_bottom = -34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "State"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 11 )
_sections_unfolded = [ "Rect" ]

[node name="change_state" type="Timer" parent="."]
process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Area2D" type="Area2D" parent="."]
editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="shape" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
_sections_unfolded = [ "shape" ]

[node name="love" type="Sprite" parent="."]
visible = false
position = Vector2( 1, -65 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 441, 98, 19, 16 )
_sections_unfolded = [ "Region", "Transform", "texture" ]

[node name="superlove2" type="Node2D" parent="."]
visible = false

[node name="love2" type="Sprite" parent="superlove2"]
visible = false
position = Vector2( 1, -65 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 441, 98, 19, 16 )
_sections_unfolded = [ "Region", "Transform", "texture" ]

[node name="Traits" parent="." instance=ExtResource( 12 )]
position = Vector2( 1, 3 )

[node name="LoveArea" type="Area2D" parent="."]
editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="LoveArea"]
shape = SubResource( 2 )
_sections_unfolded = [ "shape" ]

[node name="LoveTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 0.2
one_shot = false
autostart = true

[connection signal="state_changed" from="state_machine" to="Label" method="_on_state_machine_state_changed"]
[connection signal="timeout" from="change_state" to="." method="_on_change_state_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="LoveArea" to="." method="_on_LoveArea_body_entered"]
[connection signal="body_exited" from="LoveArea" to="." method="_on_LoveArea_body_exited"]
[connection signal="timeout" from="LoveTimer" to="." method="_on_LoveTimer_timeout"]
